==> gary9716/HybridStepper/src/AccelStepper.cpp <==
#include "AccelStepper.h"

boolean AccelStepper::runSpeed()
{
    // Dont do anything unless we actually have a step interval
    if (_stepInterval == 0)
	    return false;

    unsigned long time = micros();   
    if (time - _lastStepTime >= _stepInterval)
    {
        if (isDirForward())
        {
            // Clockwise
            if(_currentPos <  MAX_INT32_T)
                _currentPos += 1;
        }
        else
        {
            // Anticlockwise 
            if(_currentPos > -MAX_INT32_T) 
                _currentPos -= 1;
        }
        step(_currentPos);

        _lastStepTime = time; // Caution: does not account for costs in step()

	    return true;
    }
    else
    {
	    return false;
    }
}

void AccelStepper::setOutputPins(uint8_t mask)
{
    uint8_t numpins = 2;
    if (_interface == FULL4WIRE || _interface == HALF4WIRE)
	numpins = 4;
    else if (_interface == FULL3WIRE || _interface == HALF3WIRE)
	numpins = 3;
    uint8_t i;
    for (i = 0; i < numpins; i++)
	digitalWrite(_pin[i], (mask & (1 << i)) ? (HIGH ^ _pinInverted[i]) : (LOW ^ _pinInverted[i]));
}

void AccelStepper::step1(long step)
{
    (void)(step); // Unused

    // _pin[0] is step, _pin[1] is direction
    setOutputPins(_direction ? 0b10 : 0b00); // Set direction first else get rogue pulses
    setOutputPins(_direction ? 0b11 : 0b01); // step HIGH
    // Caution 200ns setup time 
    // Delay the minimum allowed pulse width
    delayMicroseconds(_minPulseWidth);
    setOutputPins(_direction ? 0b10 : 0b00); // step LOW
}

void AccelStepper::setEnablePin(uint8_t enablePin)
{
    _enablePin = enablePin;

    // This happens after construction, so init pin now.
    if (_enablePin != 0xff)
    {
        pinMode(_enablePin, OUTPUT);
        digitalWrite(_enablePin, HIGH ^ _enableInverted);
    }
}
