==> Lee-taeyun/URP2020_NUCLEO/for_changsul_bonsun/lib/AccelStepper/src/AccelStepper.cpp <==
#include "AccelStepper.h"

bool AccelStepper::runSpeed() {
  
  // Dont do anything unless we actually have a step interval
  if (!_stepInterval)
    return false;
  extern Timer t;
  // unsigned long time = micros();
  unsigned long time = std::chrono::duration_cast<chrono::microseconds>(t.elapsed_time()).count();
  //printf("%lld\n",time);
  unsigned long nextStepTime = _lastStepTime + _stepInterval;
  // Gymnastics to detect wrapping of either the nextStepTime and/or the current
  // time
  if (((nextStepTime >= _lastStepTime) &&
       ((time >= nextStepTime) || (time < _lastStepTime))) ||
      ((nextStepTime < _lastStepTime) &&
       ((time >= nextStepTime) && (time < _lastStepTime)))) {
    if (_direction == DIRECTION_CW) {
      // Clockwise
      _currentPos += 1;
    } else {
      // Anticlockwise
      _currentPos -= 1;
    }
    step(_currentPos);

    _lastStepTime = time; // Caution: does not account for costs in step()

    return true;
  } else {
    return false;
  }
}

void AccelStepper::setOutputPins(uint8_t mask) {
  //    uint8_t numpins = 2;
  //    if (_interface == FULL4WIRE || _interface == HALF4WIRE)
  //        numpins = 4;
  //    else if (_interface == FULL3WIRE || _interface == HALF3WIRE)
  //        numpins = 3;
  //    uint8_t i;
  //    for (i = 0; i < numpins; i++)
  //        digitalWrite(_pin[i], (mask & (1 << i)) ? (HIGH ^ _pinInverted[i]) :
  //        (LOW ^ _pinInverted[i]));
  *_pin0 =
      (mask & (1 << 0)) ? (HIGH ^ _pinInverted[0]) : (LOW ^ _pinInverted[0]);
  *_pin1 =
      (mask & (1 << 1)) ? (HIGH ^ _pinInverted[1]) : (LOW ^ _pinInverted[1]);
  if (_interface == FULL4WIRE || _interface == HALF4WIRE) {
    *_pin2 =
        (mask & (1 << 2)) ? (HIGH ^ _pinInverted[2]) : (LOW ^ _pinInverted[2]);
    *_pin3 =
        (mask & (1 << 3)) ? (HIGH ^ _pinInverted[3]) : (LOW ^ _pinInverted[3]);
  } else if (_interface == FULL3WIRE || _interface == HALF3WIRE)
    *_pin2 =
        (mask & (1 << 2)) ? (HIGH ^ _pinInverted[2]) : (LOW ^ _pinInverted[2]);
}

void AccelStepper::step1(long step) {
  (void)(step); // Unused

  // _pin[0] is step, _pin[1] is direction
  setOutputPins(_direction ? 0b10
                           : 0b00); // Set direction first else get rogue pulses
  setOutputPins(_direction ? 0b11 : 0b01); // step HIGH
  // Caution 200ns setup time
  // Delay the minimum allowed pulse width
  // delayMicroseconds(_minPulseWidth);
  wait_us(_minPulseWidth);
  setOutputPins(_direction ? 0b10 : 0b00); // step LOW
}

void AccelStepper::setEnablePin(PinName enablePin) {
  // _enablePin = enablePin;
  _enablePin = new DigitalOut(enablePin);

  // This happens after construction, so init pin now.
  // if (_enablePin != 0xff)
  if (*_enablePin) {
    // pinMode(_enablePin, OUTPUT);
    // digitalWrite(_enablePin, HIGH ^ _enableInverted);
    *_enablePin = HIGH ^ _enableInverted;
  }
}
